<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/valor_resultat2"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:hint="@string/valor_resultat"
        android:text="@string/minuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:text="@string/minuts" />

    <TextView
        android:id="@+id/valor_resultat3"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:hint="@string/valor_resultat"
        android:text="@string/hores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813"
        tools:text="@string/hores" />

    <TextView
        android:id="@+id/valor_resultat4"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:hint="@string/valor_resultat"
        android:text="@string/dies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        tools:text="@string/dies" />

    <EditText
        android:id="@+id/plain_text_input2"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:editable="true"
        android:fontFamily="sans-serif-condensed"
        android:inputType="text"
        android:text="@string/llista_resultats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:text="@string/llista_resultats" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:drawableLeft="@android:drawable/ic_lock_idle_alarm"
        android:drawableRight="@android:drawable/ic_lock_idle_alarm"
        android:text="@string/titol"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        tools:text="@string/titol" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="31dp"
        android:layout_height="36dp"
        android:src="@android:drawable/ic_lock_idle_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/valor_inicial"
        android:layout_width="202dp"
        android:layout_height="61dp"
        android:editable="true"
        android:fontFamily="sans-serif-condensed"
        android:inputType="text"
        android:text="@string/introduir_valor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:text="@string/introduir_valor" />

    <Spinner
        android:id="@+id/unitatsspinner"
        android:layout_width="120dp"
        android:layout_height="59dp"
        android:entries="@array/unitats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/valor_resultat"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:hint="@string/valor_resultat"
        android:text="@string/segons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527"
        tools:text="@string/segons" />


</androidx.constraintlayout.widget.ConstraintLayout>